# Laplasian-dual-pyramid-on-CUDA

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: filter_cpu.h  filter_gpu.h
src/: filter_cpu.cpp  filter_gpu.cu  main.cpp
